--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ p{
   align-items: center;
   width: 1rem;
   height: 1rem;
-  color: var(--Medium-Grey);
+  color: var(--White);
 
 }
 
@@ -165,3 +165,19 @@ p{
   color: var(--White);
   text-transform: uppercase;
 }
+
+.rating-item:hover{
+  background-color: var(--Medium-Grey);
+
+}
+
+.rating-item.active{
+  background-color: var(--Orange);
+
+}
+
+.submit:hover{
+  background-color: var(--White);
+  color: var(--Orange);
+}
+
